# thin-cell

./: CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  flake.nix
.github/workflows/: ci_check.yml  ci_check_minimal.yml  ci_format.yml  ci_test.yml
src/: fat_ptr.rs  lib.rs  main.rs  state.rs  verify.rs
src/state/: macros.rs  mod.rs
src/sync/: mod.rs  state.rs
src/unsync/: mod.rs  state.rs
tests/: common.rs  send_sync.rs  sync.rs  tests.rs  unsync.rs
