[package]
name = "thin-cell"
version = "0.1.2"
edition = "2024"
authors = ["George Miao <gm@miao.dev>"]
description = "A compact, single-threaded smart pointer combining reference counting and interior mutability"
license = "MIT"
repository = "https://github.com/compio-rs/thin-cell"
documentation = "https://docs.rs/thin-cell"
homepage = "https://github.com/compio-rs/thin-cell"
keywords = ["rc", "refcell", "smart-pointer", "interior-mutability", "thin"]
categories = ["data-structures", "memory-management"]
readme = "README.md"
